some http/tests/ are crashing with ASSERTION FAILED: isInRoutingArbitrationForToken(token) || m_setupArbitrationOngoing https://bugs.webkit.org/show_bug.cgi?id=226896

Reviewed by Eric Carlson.

When the `RoutingArbiter` fails to `-[beginArbitrationWithCategory:completionHandler:]`,
a token won't be added to `m_tokens`. Therefore, we should remove the assertion
in `SharedRoutingArbitrator::endRoutingArbitrationForToken()`.

* platform/audio/mac/SharedRoutingArbitrator.mm:
(WebCore::SharedRoutingArbitrator::endRoutingArbitrationForToken):


Canonical link: https://commits.webkit.org/238853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278922 268f45cc-cd09-0410-ab3c-d52691b4dbfc