Source/WebCore/platform/audio/mac/SharedRoutingArbitrator.mm
@@ -120,8 +120,8 @@ void SharedRoutingArbitrator::beginRoutingArbitrationForToken(const Token& token
 
 void SharedRoutingArbitrator::endRoutingArbitrationForToken(const Token& token)
 {
-    ASSERT(isInRoutingArbitrationForToken(token) || m_setupArbitrationOngoing);
-    m_tokens.remove(token);
+    if (m_tokens.contains(token))
+        m_tokens.remove(token);
 
     if (!m_tokens.computesEmpty())
         return;
